--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -131,6 +131,9 @@
             <br>
             <br>
             <h2>Textarea</h2>
+            <p>
+                Don’t forget to use the <b><i>rows</i></b> attribute to specify number of lines.
+            </p>
 
             <div class="input">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
@@ -138,6 +141,11 @@
 
             <br>
             <h3>.input--expandable</h3>
+            <p>
+                Using JavaScript, calculate the height to make the textarea expand as the user types.
+                In this case, the <b><i>rows</i></b> attribute will serve as a starting point, and the <b><i>max-height</i></b>
+                set in the styles will limit the computed height, even if it exceeds any reasonable value.
+            </p>
 
             <div class="input input--expandable">
                 <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
