--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -18,14 +18,14 @@
             <br>
             <h1>.button</h1>
 
-            <button class="button">Submit</button>
+            <button class="button" type="button">Submit</button>
 
             <br>
             <br>
             <br>
             <h2>.button--secondary</h2>
 
-            <button class="button button--secondary">Cancel</button>
+            <button class="button button--secondary" type="button">Cancel</button>
 
 
             <br>
