--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -27,6 +27,14 @@
 
             <button class="button button--secondary" type="button">Cancel</button>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>Disabled</h2>
+
+            <button class="button" type="button" disabled>Submit</button>
+
 
             <br>
             <br>
