types and appearance

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -245,6 +245,77 @@
             <br>
             <br>
             <br>
+            <h2>Types</h2>
+
+
+            <label class="label" for="dqx2iwgu">
+                url
+            </label>
+            <div class="input">
+                <input class="input__widget" type="url" id="dqx2iwgu">
+            </div>
+
+            <br>
+
+            <label for="tzu2dahi">
+
+            </label>
+            <div class="input">
+                <input class="input__widget" type="tel" id="p17ufmf9">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="search">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="number">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="color">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="date">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="datetime-local">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="week">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="month">
+            </div>
+
+            <br>
+
+            <div class="input">
+                <input class="input__widget" type="time">
+            </div>
+
+
+            <br>
+            <br>
+            <br>
             <br>
             <br>
             <br>
