--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -245,11 +245,29 @@
             <br>
             <br>
             <br>
-            <h2>Types</h2>
+            <h2>Types test</h2>
+            <br>
 
+            <label class="label" for="uzoyce97">
+                type="email"
+            </label>
+            <div class="input">
+                <input class="input__widget" type="email" id="uzoyce97">
+            </div>
+
+            <br>
+
+            <label class="label" for="qv6hko4q">
+                type="tel"
+            </label>
+            <div class="input">
+                <input class="input__widget" type="tel" id="qv6hko4q">
+            </div>
+
+            <br>
 
             <label class="label" for="dqx2iwgu">
-                url
+                type="url"
             </label>
             <div class="input">
                 <input class="input__widget" type="url" id="dqx2iwgu">
@@ -257,59 +275,74 @@
 
             <br>
 
-            <label for="tzu2dahi">
-
+            <label class="label" for="ey58yjk9">
+                type="search"
             </label>
             <div class="input">
-                <input class="input__widget" type="tel" id="p17ufmf9">
+                <input class="input__widget" type="search" id="ey58yjk9">
             </div>
 
             <br>
 
+            <label class="label" for="h68i9f7g">
+                type="number"
+            </label>
             <div class="input">
-                <input class="input__widget" type="search">
+                <input class="input__widget" type="number" id="h68i9f7g">
             </div>
 
             <br>
 
+            <label class="label" for="8fq2k8fo">
+                type="color"
+            </label>
             <div class="input">
-                <input class="input__widget" type="number">
+                <input class="input__widget" type="color" id="8fq2k8fo">
             </div>
 
             <br>
 
+            <label class="label" for="vecqj15p">
+                type="date"
+            </label>
             <div class="input">
-                <input class="input__widget" type="color">
+                <input class="input__widget" type="date" id="vecqj15p">
             </div>
 
             <br>
 
+            <label class="label" for="8xg4jfb3">
+                type="datetime-local"
+            </label>
             <div class="input">
-                <input class="input__widget" type="date">
+                <input class="input__widget" type="datetime-local" id="8xg4jfb3">
             </div>
 
             <br>
 
+            <label class="label" for="brif3gg2">
+                type="week"
+            </label>
             <div class="input">
-                <input class="input__widget" type="datetime-local">
+                <input class="input__widget" type="week" id="brif3gg2">
             </div>
 
             <br>
 
+            <label class="label" for="iei6tkvf">
+                type="month"
+            </label>
             <div class="input">
-                <input class="input__widget" type="week">
+                <input class="input__widget" type="month" id="iei6tkvf">
             </div>
 
             <br>
 
+            <label class="label" for="33s23mr7">
+                type="time"
+            </label>
             <div class="input">
-                <input class="input__widget" type="month">
-            </div>
-
-            <br>
-
-            <div class="input">
-                <input class="input__widget" type="time">
+                <input class="input__widget" type="time" id="33s23mr7">
             </div>
 
 
