--- a/src/markups/_link.html
+++ b/src/markups/_link.html
@@ -88,11 +88,11 @@
             <h2>Tags test</h2>
 
 
-            <div class="link">div.link</div>
+            <div class="link" tabindex="0">div.link</div>
 
-            <span class="link">span.link</span>
+            <span class="link" tabindex="0">span.link</span>
 
-            <label class="link">label.link</label>
+            <label class="link" tabindex="0">label.link</label>
 
             <a class="link" href="#">a.link</a>
 
