Update jquery, clean up inputs

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>.input</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">-->
@@ -28,11 +27,6 @@
                 <input class="input__widget" type="text" placeholder="First name" value="Konstantin Konstantinopolsky">
             </div>
 
-            <br>
-
-            <div class="input">
-                <input class="input__widget" type="password" value="0xFoo">
-            </div>
 
             <br>
             <br>
@@ -124,6 +118,19 @@
             </div>
             <div class="helper helper--output">
                 New password is similar to previous password
+            </div>
+
+
+            <br>
+            <br>
+            <br>
+            <h2>Password</h2>
+            <p>
+                The font was changed here for better-looking dots.
+            </p>
+
+            <div class="input">
+                <input class="input__widget" type="password" value="0xFoo">
             </div>
 
 
@@ -245,7 +252,7 @@
             <br>
             <br>
             <br>
-            <h2>Types test</h2>
+            <h2>Other types</h2>
             <br>
 
             <label class="label" for="uzoyce97">
@@ -360,7 +367,7 @@
         </div>
 
 
-        <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
+        <script src="../vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
         <script src="../scripts/_mfp.js"></script>
         <script src="../scripts/_input.js"></script>
