clean up input component

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -34,7 +34,7 @@
             <h2>With <a href="_label.html">.label</a> and <a href="_helper.html">.helper</a></h2>
             <p>
                 These two are not part of <b><i>.input</i></b> component. However, they often used together,
-                placed before and after. Like so:
+                placed before and after, like so:
             </p>
 
             <label class="label" for="bp24napi">
@@ -102,7 +102,7 @@
             </div>
 
             <br>
-            <p>Multi-error case covered as well and errors should be output one after another, like so:</p>
+            <p>In the multi-error case, helpers should be output one after another, like so:</p>
 
             <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
