expanding textarea as function

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -143,7 +143,9 @@
             </p>
 
             <div class="input">
-                <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
+                <textarea class="input__widget" placeholder="Your message" rows="3">
+
+                </textarea>
             </div>
 
             <br>
