select, selected option

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -167,7 +167,7 @@
 
             <div class="input">
                 <select class="input__widget">
-                    <option>Bangkok</option>
+                    <option selected>Bangkok</option>
                     <option>Moscow</option>
                     <option>...</option>
                     <option>Washington</option>
