select placeholder as a function

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -216,7 +216,7 @@
             </p>
 
 
-            <div class="input input--placeholder-is-chosen">
+            <div class="input">
                 <select class="input__widget">
                     <option value="placeholder" selected>City</option>
                     <option>Bangkok</option>
@@ -228,7 +228,7 @@
 
             <br>
 
-            <div class="input input--placeholder-is-chosen">
+            <div class="input">
                 <select class="input__widget" disabled>
                     <option value="placeholder" selected>City</option>
                     <option>Bangkok</option>
@@ -240,7 +240,7 @@
 
             <br>
 
-            <div class="input input--placeholder-is-chosen input--error">
+            <div class="input input--error">
                 <select class="input__widget">
                     <option value="placeholder" selected>City</option>
                     <option>Bangkok</option>
