--- a/src/markups/_helper.html
+++ b/src/markups/_helper.html
@@ -51,7 +51,7 @@
             <br>
             <br>
             <br>
-            <h2>.helper--output</h2>
+            <h2>.helper--error</h2>
             <p>
                 Can be used for outputting error message. A few in a row is also possible:
             </p>
@@ -59,16 +59,16 @@
             <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password is too short
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password must contain a special character
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password must be hard to guess: dates, phone numbers and names are not allowed and either it shouldn’t be based on public data
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 New password is similar to previous password
             </div>
 
