--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -88,7 +88,7 @@
             <div class="input input--error">
                 <input class="input__widget" type="text" placeholder="First name">
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 This field is required
             </div>
 
@@ -97,7 +97,7 @@
             <div class="input input--error">
                 <input class="input__widget" type="email" placeholder="Email" value="foobar@example.">
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Email is not valid
             </div>
 
@@ -107,16 +107,16 @@
             <div class="input input--error">
                 <input class="input__widget" type="password" placeholder="Password" value="0xFoo">
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password is too short
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password must contain a special character
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 Password must be hard to guess: dates, phone numbers and names are not allowed and either it shouldn’t be based on public data
             </div>
-            <div class="helper helper--output">
+            <div class="helper helper--error">
                 New password is similar to previous password
             </div>
 
