--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -250,6 +250,14 @@
                 </select>
             </div>
 
+            <p>
+                Don’t make option with placeholder to be disabled. Users may want to leave this field untouched, or clear it by re-selecting placeholder.
+                If the form was submitted with <b><i>"placeholder"</i></b> as the value for the select, it should be treated as equivalent to an empty text field.
+            </p>
+            <p>
+                On the other hand, if the field is required, ensure that it does not pass validation with the placeholder selected.
+            </p>
+
 
             <br>
             <br>
