manifest, favicon, google fonts, remove unnecessary jquery plugin

--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -50,7 +50,7 @@
             </div>
 
             <p>
-                Also same <b><i>.helper</i></b> component will be used to output messages in cases covering errors.
+                Also, the same <b><i>.helper</i></b> component will be used to output messages in cases covering errors.
             </p>
 
             <br>
@@ -143,9 +143,7 @@
             </p>
 
             <div class="input">
-                <textarea class="input__widget" placeholder="Your message" rows="3">
-
-                </textarea>
+                <textarea class="input__widget" placeholder="Your message" rows="3"></textarea>
             </div>
 
             <br>
