--- a/src/markups/_wysiwyg.html
+++ b/src/markups/_wysiwyg.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>.wysiyg</title>
+        <title>.wysiwyg</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">-->
         <link rel="stylesheet" href="../styles/style.css">
