--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -30,7 +30,7 @@
             <br>
             <br>
             <br>
-            <h2>Disabled</h2>
+            <h2>:disabled</h2>
 
             <button class="button" type="button" disabled>Submit</button>
 
