docs in russian

--- a/src/markups/_helper-ru.html
+++ b/src/markups/_helper-ru.html
@@ -6,15 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
     </head>
-    <body>
+    <body style="background: white;">
 
         <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
             <br>
             <h1>.helper</h1>
             <p>
-                A simple line of helping text. It has the top padding set, and it meant
-                to be used with components such as <a href="_input.html">.input</a>:
+                Строка вспомогательного текста. Обычно используется с <a href="_input.html"><b><i>.input</i></b></a>:
             </p>
 
 
@@ -29,8 +28,8 @@
 
             <br>
             <p>
-                Notice that helper is placed after input (not inside). It makes helper component universal.
-                So it can be used with any other element:
+                Однако это не часть инпута. Компоненты идут друг за другом. Это делает <b><i>.helper</i></b> более универсальным.
+                Его можно использовать с любым другим элементом:
             </p>
 
 
@@ -41,7 +40,7 @@
             <!--/temp -->
 
             <div class="helper">
-                Changes will be saved automatically
+                Изменения сохраняются автоматически
             </div>
 
             <br>
@@ -49,7 +48,7 @@
             <br>
             <h2>.helper--error</h2>
             <p>
-                Can be used for outputting error message. A few in a row is also possible:
+                Можно использовать для вывода ошибок. Можно выводить несколько штук подряд:
             </p>
 
             <div class="input input--error">
