--- a/src/markups/_button-ru.html
+++ b/src/markups/_button-ru.html
@@ -6,21 +6,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
     </head>
-    <body>
+    <body style="background: white;">
 
         <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
             <br>
             <h1>.button</h1>
 
-            <button class="button" type="button">Submit</button>
+            <button class="button" type="button">Отправить</button>
 
             <br>
             <br>
             <br>
             <h2>.button--secondary</h2>
 
-            <button class="button button--secondary" type="button">Cancel</button>
+            <button class="button button--secondary" type="button">Отмена</button>
 
             <br>
             <br>
@@ -28,14 +28,14 @@
             <br>
             <h2>:disabled</h2>
 
-            <button class="button" type="button" disabled>Submit</button>
+            <button class="button" type="button" disabled>Отправить</button>
 
 
             <br>
             <br>
             <br>
             <br>
-            <h2>Tags test</h2>
+            <h2>Теги</h2>
 
             <div class="button" tabindex="0">div.button</div>
 
