--- a/src/markups/_label-ru.html
+++ b/src/markups/_label-ru.html
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
     </head>
-    <body>
+    <body style="background: white;">
 
         <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
             <br>
             <h1>.label</h1>
             <p>
-                Typically used with components such as <a href="_input.html">.input</a>:
+                Обычно используется с <a href="_input.html"><b><i>input</i></b></a>:
             </p>
 
 
             <label class="label" for="ooygvb8t">
-                First name
+                Ваше имя
             </label>
 
             <div class="input">
@@ -28,15 +28,13 @@
 
             <br>
             <p>
-                Notice that label is placed before input (not inside). It makes label component universal.
+                Однако это не часть инпута. Компоненты идут друг за другом. Это делает <b><i>.label</i></b> более универсальным.
+                Его можно использовать с любым другим элементом:
             </p>
-            <p>
-                So it can be used with any other element.
-            </p>
-            <br>
+
 
             <div class="label">
-                File manager
+                Файловый менеджер
             </div>
 
             <!-- temp -->
@@ -47,10 +45,10 @@
 
             <br>
             <p>
-                If we deal with something that isn’t form element, we probably don’t need to use the
-                <b><i>&lt;label&gt;</i></b> tag with the <b><i>for</i></b> attribute.
-                Just a normal <b><i>&lt;div&gt;</i></b> will do as an in example above.
+                Алсо заметим: если имеем дело не с элементом формы, то в качестве тега можно использовать
+                <b><i>&lt;div&gt;</i></b> вместо <b><i>&lt;label&gt;</i></b>, как в примере выше.
             </p>
+
 
 
 
