--- a/src/markups/_choice.html
+++ b/src/markups/_choice.html
@@ -14,132 +14,163 @@
             <h1>.choice</h1>
 
 
-            <label class="choice choice--checkbox">
+            <label class="choice">
                 <input class="choice__widget" type="checkbox">
+                <span class="choice__label">Paris</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--radio">
+            <label class="choice">
                 <input class="choice__widget" type="radio" name="PFdomUtPW5">
+                <span class="choice__label">Tokyo</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--checkbox">
+            <label class="choice">
                 <input class="choice__widget" type="checkbox" checked>
+                <span class="choice__label">New York</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--radio">
+            <label class="choice">
                 <input class="choice__widget" type="radio" name="PFdomUtPW5" checked>
+                <span class="choice__label">Sydney</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
 
             <br>
             <br>
-            <br>
-            <br>
-            <h2>.choice--bolder-font</h2>
+            <h2>.choice--bolder</h2>
 
-            <label class="choice choice--bolder-font choice--checkbox">
+            <label class="choice choice--bolder">
                 <input class="choice__widget" type="checkbox">
+                <span class="choice__label">Yellow</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Apple</span>
             </label>
 
-            <label class="choice choice--bolder-font choice--radio">
-                <input class="choice__widget" type="radio" name="kulUc84">
+            <label class="choice choice--bolder">
+                <input class="choice__widget" type="radio" name="PFdomUtPW5">
+                <span class="choice__label">Purple</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">eBay</span>
             </label>
 
-            <label class="choice choice--bolder-font choice--checkbox">
+            <label class="choice choice--bolder">
                 <input class="choice__widget" type="checkbox" checked>
+                <span class="choice__label">Red</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">The Walt Disney Company</span>
             </label>
 
-            <label class="choice choice--bolder-font choice--radio">
-                <input class="choice__widget" type="radio" name="kulUc84" checked>
+            <label class="choice choice--bolder">
+                <input class="choice__widget" type="radio" name="PFdomUtPW5" checked>
+                <span class="choice__label">Blue</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Mitsubishi</span>
             </label>
 
 
-
             <br>
             <br>
-            <br>
-            <br>
-            <h2>.choice--disabled</h2>
-            <p>
-                Also please use <b>disabled</b> attribute to block it on logic level
-            </p>
+            <h2>:disabled</h2>
             <br>
 
 
-            <label class="choice choice--checkbox choice--disabled">
+            <label class="choice">
                 <input class="choice__widget" type="checkbox" disabled>
+                <span class="choice__label">Pepperoni</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--radio choice--disabled">
+            <label class="choice">
                 <input class="choice__widget" type="radio" name="Szf0XOC" disabled>
+                <span class="choice__label">Mushrooms</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--checkbox choice--disabled">
+            <label class="choice">
                 <input class="choice__widget" type="checkbox" checked disabled>
+                <span class="choice__label">Onions</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--radio choice--disabled">
+            <label class="choice">
                 <input class="choice__widget" type="radio" name="Szf0XOC" checked disabled>
+                <span class="choice__label">Olives</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
 
-
-
-
-
-
-            <br>
-            <br>
             <br>
             <br>
             <h2>.choice--full-width</h2>
 
             <p>
-                By default .choice component has width based on text inside.
-                But in some cases we want it to be full width. For example in the
-                list of options in sidebar. In this case we want to move cursor
-                over all checkboxes and be able to click them even if some
-                of them are shorter.
+                By default, the .choice component has a width based on the text inside
+                <b><i>(fit-content)</i></b>. However, in some cases, we want it to be full-width,
+                for example, in a list of options in the sidebar. In this case, we want to move the
+                cursor over all checkboxes and be able to click them even if some of them are shorter.
             </p>
 
 
-            <label class="choice choice--checkbox choice--full-width">
+            <label class="choice choice--full-width">
                 <input class="choice__widget" type="checkbox">
+                <span class="choice__label">Mystery</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
             </label>
 
-            <label class="choice choice--radio choice--full-width">
-                <input class="choice__widget" type="radio">
+            <label class="choice choice--full-width">
+                <input class="choice__widget" type="checkbox">
+                <span class="choice__label">Fantasy</span>
                 <i class="choice__icon" role="presentation"></i>
-                <span class="choice__label">Профильное образование</span>
+            </label>
+
+            <label class="choice choice--full-width">
+                <input class="choice__widget" type="checkbox" checked>
+                <span class="choice__label">Romance</span>
+                <i class="choice__icon" role="presentation"></i>
+            </label>
+
+            <label class="choice choice--full-width">
+                <input class="choice__widget" type="checkbox" checked>
+                <span class="choice__label">Science Fiction</span>
+                <i class="choice__icon" role="presentation"></i>
             </label>
 
 
+            <br>
+            <p>
+                Although, if it’s not a tiny sidebar but a wide area, it feels weird to be able
+                to hover or click too far to the right, like in the example above. It makes sense
+                to wrap it in the vertical fit-content flex or inline-flex, so all checkboxes
+                will be full-width but limited by the width of the longest item:
+            </p>
+
+            <div style="display: flex; width: fit-content; flex-direction: column;">
+
+                <label class="choice choice--full-width">
+                    <input class="choice__widget" type="checkbox">
+                    <span class="choice__label">Mystery</span>
+                    <i class="choice__icon" role="presentation"></i>
+                </label>
+
+                <label class="choice choice--full-width">
+                    <input class="choice__widget" type="checkbox">
+                    <span class="choice__label">Fantasy</span>
+                    <i class="choice__icon" role="presentation"></i>
+                </label>
+
+                <label class="choice choice--full-width">
+                    <input class="choice__widget" type="checkbox" checked>
+                    <span class="choice__label">Romance</span>
+                    <i class="choice__icon" role="presentation"></i>
+                </label>
+
+                <label class="choice choice--full-width">
+                    <input class="choice__widget" type="checkbox" checked>
+                    <span class="choice__label">Science Fiction</span>
+                    <i class="choice__icon" role="presentation"></i>
+                </label>
+
+            </div>
 
 
             <br>
