--- a/src/markups/_nobr.html
+++ b/src/markups/_nobr.html
@@ -14,7 +14,7 @@
             <h1>.nobr</h1>
 
             <p>
-                A helper component for text formatting: prevents line breaks. It makes sense
+                A helper component for text formatting: to prevent line breaks. It makes sense
                 to use in cases where it is not possible to use non-breaking hyphens or spaces.
                 For example:
                 <span class="nobr"><a class="link link--fake" href="tel:+71234567890">+7 (123) 456-78-90</a></span>
