--- a/src/markups/_nobr-ru.html
+++ b/src/markups/_nobr-ru.html
@@ -41,9 +41,7 @@
         <script src="../vendors/inputmask/jquery.inputmask.min.js"></script>
         <script src="../vendors/inputmask.phone/inputmask.phone.extensions.min.js"></script>
         <script src="../vendors/inputmask.phone/phone-codes/phone-ru.min.js"></script>
-        <script src="../scripts/_mfp.js"></script>
-        <script src="../scripts/_input.js"></script>
-        <script src="../scripts/_inputmask.js"></script>
+        <script src="../scripts/scripts.js"></script>
 
 
     </body>
