--- a/src/markups/_link.html
+++ b/src/markups/_link.html
@@ -30,6 +30,15 @@
             <br>
             <br>
             <br>
+            <h2>.link--inverted-text-alike</h2>
+
+            <a class="link link--inverted-text-alike" href="#">Privacy Policy</a>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
             <h2>.link--no-hover</h2>
             <p>
                 For the case when we <b>need</b> the functionality of <b><i>&lt;a&gt;</i></b>, but we don’t want to emphasize that it is actually a link.
